--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -14,4 +14,5 @@ body {
     box-sizing: border-box;
     color: $primary-font-color;
     font-family: 'Montserrat', sans-serif !important;
+    overflow-x: hidden;
 }
